tests/regression/error/hw4_error04.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_EXP {exp=EXP_BINARY {lft=EXP_NONE,opr=BOP_MINUS,rht=EXP_NONE}}]}
  : program
;
